# edu_introabm_re

./: .gitignore  .project  .pydevproject  README.md
abmodel/: FireEvacuation_RoomSize.ipynb  app.py  pyproject.toml  requirements.txt  requirements_abmodel.txt  run_batch.py  run_headless.py
abmodel/.ipynb_checkpoints/: FireEvacuation_RoomSize-checkpoint.ipynb
abmodel/fire_evacuation/: agent.py  model.py  net.py  utils.py
abmodel/fire_evacuation/.ipynb_checkpoints/: agent-checkpoint.py  model-checkpoint.py  server-checkpoint.py
abmodel/fire_evacuation/floorplans/: floorplan_oneRoom.txt
abmodel/fire_evacuation/tests/: test_agent_help.py  test_agent_nervousness.py
exercises/02/: exercise02.ipynb
exercises/04/: exercise04.ipynb
exercises/04/task02/: fire-evacuation_classes.gaphor
exercises/05/: exercise05.ipynb
exercises/05/task02/pd_grid/: app.py
exercises/05/task02/pd_grid/pd_grid/: agent.py  model.py  server.py
exercises/06/: exercise06.ipynb
exercises/07/: exercise07.ipynb
exercises/08/: exercise08.ipynb
exercises/09/: exercise09.ipynb
exercises/10/: exercise10.ipynb
lectures/02/: IntroMesa.ipynb  IntroOo.ipynb  IntroPython.ipynb
lectures/09/: lecture09_stochasticity_schelling.ipynb
lectures/09/schelling/: analysis.ipynb  model.py  server.py
