[tool.poetry]
name = "abmodel"
version = "0.1.0"
description = "Exercise agent-based model for lecture Introduction to ABM"
authors = ["Sascha Holzhauer <Sascha.Holzhauer@uni-kassel.de>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
pyinstrument = "^4.1.1"
matplotlib = "^3.5.1"
numpy = "^1.22.3"
pandas = "^1.4.2"
networkx = "^2.7.1"
Mesa = "^0.9.0"
spyder = "^5.4.0"
jupyterlab = "^3.5.0"

[tool.poetry.dev-dependencies]
pydocstyle = "^6.1.1"
bandit = "^1.7.1"
line-profiler = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
